# haskell-sandbox

./: cabal.project  default.nix  haskell-sandbox.cabal  hie.yaml
architecture/brick-tui/: brick-tui.cabal  hie.yaml
architecture/brick-tui/app/: App.hs  Main.hs
architecture/brick-tui/app/Screens/: Start.hs
architecture/tagless/: CHANGELOG.md  PLAN.md  tagless.cabal
architecture/tagless/app/: Main.hs
architecture/tagless/src/: App.hs  Repos.hs  TestApp.hs  Types.hs
architecture/tagless/src/App/: CargoRegistry.hs  HttpIdService.hs  IdService.hs  IdServiceIo.hs  IdServiceNewtypeWrap.hs  IdServiceSubs.hs  SQLiteInstances.hs  Types.hs  UserRegistry.hs
architecture/tagless/src/SQLite/: DebugSQLite.hs
architecture/tagless/src/Usecase/: Registration.hs
concurrency/: chain-connect-2.rest  concurrency.cabal  rest.rest  strict-chain-connect.rest
concurrency/app/: Main.hs
concurrency/src/: Constants.hs  HttpNode.hs  LogUtils.hs  Network .hs  Network.hs  Node.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: haskell-sandbox-0.1.0.0-inplace.conf  package.cache  tagless-0.1.0.0-inplace.conf
id-service/: CHANGELOG.md  README.md  id-service.cabal
id-service/app/: Main.hs
learning/: learning.cabal
learning/app/: Main.hs
learning/src/: TypeClassesStuff.hs  TypeFamilies.hs
puzzles/: CHANGELOG.md  puzzles.cabal
puzzles/app/: Hanoi.hs  Main.hs
random-stuff/: random-stuff.cabal
random-stuff/app/: Main.hs
