cabal-version:      2.4
name:               concurrency
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  -- -Werror

  build-depends:
    , base    ^>=4.15.1.0
    , relude  ^>=1.1.0.0

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
    
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import: common-lang

  build-depends: 
    , async
    , containers
    , scotty
    , uuid ^>=1.3.15
    , http-conduit ^>=2.3.8
    , cryptohash-sha256 ^>= 0.11.102.1
    , bytestring ^>= 0.10.10.0
    , base16-bytestring
    , aeson
    , text ^>= 2.0.1
  
  exposed-modules:
    Node
    Constants
    Types
    HttpNode

  other-modules:
    LogUtils

  hs-source-dirs:   src
  default-language: Haskell2010

executable concurrency
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    concurrency

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   app
  default-language: Haskell2010
