cabal-version:      2.4
name:               id-service
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Mikhail Lazarev
maintainer:         m282021@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable id-service
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      , base ^>=4.15.1.0
      , scotty
      , uuid

    hs-source-dirs:   app

    default-extensions:
      OverloadedStrings
      
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
