cabal-version:      2.4
name:               brick-tui
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -threaded
    -rtsopts -with-rtsopts=-N

  -- -Werror



  build-depends:
    , base    ^>=4.15.1.0
    , relude  ^>=1.1.0.0

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- library
--   import:           common-lang
--   exposed-modules:
--     App
--     App.CargoRegistry
--     App.HttpIdService
--     App.IdServiceSubs
--     App.SQLiteInstances
--     App.Types
--     App.UserRegistry
--     Repos
--     SQLite.DebugSQLite
--     TestApp
--     Types
--     Usecase.Registration

--   other-modules:    Paths_brick-tui
--   hs-source-dirs:   src
--   build-depends:
--     , containers
--     , http-conduit
--     , monad-logger
--     , mtl
--     , pretty-show
--     , sqlite-simple
--     , stm
--     , transformers
--     , transformers-either
--     , unliftio
--     , uuid

--   default-language: Haskell2010

executable tui
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    , pretty-show
    , brick ^>=1.5
    , tagless
    , vty
    -- , unliftio
    -- , monad-logger

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app
  other-modules:
    App
    
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    -- Paths_brick-tui
    PureTestApp
    RegistrationSpec

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                 >=4.7 && <5

  default-language: Haskell2010
